# azure-sdk-for-rust

./: .dict.txt  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlintrc  .mcp.json  .taplo.toml  .travis.yml  .waza.yaml  2  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COSMOS_STATUS_ISSUE.md  Cargo.toml  Cargo.toml.bak  FAQ.md  HISTORY.md  LICENSE  NOTICE.txt  README.md  SECURITY.md  SUPPORT.md  \  clippy.toml  deny.toml  dhat-heap-ppcb-disabled-v2.json  dhat-heap-ppcb-disabled.json  dhat-heap-ppcb-enabled-v2.json  dhat-heap-ppcb-enabled.json  dhat-heap.json  metadata.json  rust-toolchain.toml  rustfmt.toml  search_results.txt  shell.nix  vcpkg.json
auth_aad/: Cargo.toml  README.md
auth_aad/examples/: cli_credentials.rs  client_credentials_flow.rs  default_credentials.rs  device_code_flow.rs
azure_sdk_auth_aad/: Cargo.toml  README.md
azure_sdk_auth_aad/examples/: client_credentials_flow_blob.rs  code_flow.rs  code_flow_blob.rs  device_code_flow.rs  environment_credentials.rs  interactive.rs  interactive_blob.rs  non_interactive.rs  non_interactive.rs_
azure_sdk_auth_aad/src/: device_code_flow.rs  device_code_responses.rs  errors.rs  lib.rs  login_response.rs  naive_server.rs  prelude.rs  refresh_token.rs
azure_sdk_cosmos/: Cargo.toml
azure_sdk_cosmos/examples/: attachments00.rs  attachments_00.rs  collection.rs  create_delete_database.rs  database00.rs  database_00.rs  document00.rs  document_entries00.rs  document_entries01.rs  document_entries_00.rs  document_entries_01.rs  key_ranges00.rs  permission00.rs  permission_00.rs  query_document00.rs  query_document_00.rs  readme.rs  stored_proc.rs  stored_proc_01.rs  trigger_00.rs  user00.rs  user_defined_function_00.rs  user_permission_token.rs
azure_sdk_cosmos/src/: authorization_token.rs  client.rs  collection.rs  consistency_level.rs  create_collection_builder.rs  database.rs  document.rs  document_attributes.rs  errors.rs  from_headers.rs  headers.rs  indexing_directive.rs  lib.rs  partition_key.rs  permission.rs  permission_resource.rs  permission_token.rs  prelude.rs  query.rs  request_response.rs  resource.rs  resource_quota.rs  to_json_vector.rs  traits.rs  trigger.rs  user.rs
azure_sdk_cosmos/tests/: attachment00.rs  attachment_00.rs  cosmos_collection.rs  cosmos_database.rs  cosmos_document.rs  permission.rs  permission_token_usage.rs  setup.rs  trigger.rs  user.rs  user_defined_function00.rs
azure_sdk_keyvault/: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
azure_sdk_keyvault/examples/: backup_secret.rs  delete_secret.rs  get_secret.rs  get_secret_versions.rs  list_secrets.rs  restore_secret.rs  set_secret.rs  update_secret.rs
azure_sdk_keyvault/src/: client.rs  lib.rs  secret.rs
azure_sdk_service_bus/: Cargo.toml
azure_sdk_service_bus/examples/: service_bus00.rs
azure_sdk_service_bus/src/: lib.rs
azure_sdk_service_bus/tests/: event_hub.rs
azure_sdk_storage_account/: Cargo.toml  README.md
azure_sdk_storage_account/examples/: account00.rs
azure_sdk_storage_account/src/: lib.rs  prelude.rs
azure_sdk_storage_account/tests/: account.rs
azure_sdk_storage_blob/: Cargo.toml  README.md
azure_sdk_storage_blob/examples/: blob00.rs  blob02.rs  blob_00.rs  blob_01.rs  blob_02_bearer_token.rs  blob_03_boxed_client.rs  blob_04.rs  blob_05_default_credential.rs  blob_range.rs  connection_string.rs  container00.rs  container01.rs  container_00.rs  container_01.rs  container_and_blob.rs  copy_blob_from_url.rs  count_blobs.rs  emulator00.rs  emulator_00.rs  list_blobs00.rs  list_blobs_00.rs  put_append_blob00.rs  put_append_blob_00.rs  put_block_blob00.rs  put_block_blob_00.rs  put_page_blob00.rs  put_page_blob_00.rs  shared_access_signature.rs  stream_blob00.rs  stream_blob_00.rs
azure_sdk_storage_blob/src/: lib.rs  prelude.rs
azure_sdk_storage_blob/tests/: append_blob.rs  blob.rs  container.rs  page_blob.rs  stream_blob00.rs  stream_list_blobs.rs
azure_sdk_storage_core/: Cargo.toml  README.md
azure_sdk_storage_core/examples/: box.rs  connection_string_builder.rs  sas00.rs
azure_sdk_storage_core/src/: bearer_token_client.rs  blob_sas_builder.rs  client.rs  client_endpoint.rs  connection_string.rs  connection_string_builder.rs  container_sas_builder.rs  hyper_client_endpoint.rs  into_azure_path.rs  key_client.rs  lib.rs  prelude.rs  rest_client.rs  shared_access_signature.rs
azure_sdk_storage_queue/: Cargo.toml  README.md
azure_sdk_storage_queue/examples/: get_messages.rs  list_queues.rs  put_message.rs
azure_sdk_storage_queue/src/: lib.rs  prelude.rs
azure_sdk_storage_table/: Cargo.toml  README.md
azure_sdk_storage_table/examples/: cloud_table.rs  copy_table.rs  entities.rs  entries.rs  tables.rs
azure_sdk_storage_table/src/: cloud_table.rs  lib.rs  table_client.rs  table_entry.rs
core/: Cargo.toml
doc/azure/: Cargo.toml  README.md
doc/microsoft/: Cargo.toml  README.md
eng/tools/: Cargo.toml  rust-toolchain.toml
samples/cosmos_read_item_native_tls/: .cspell.json  Cargo.toml  README.md  azure.yaml
samples/list_blobs_native_tls/: Cargo.toml  README.md  azure.yaml
samples/list_blobs_rustls_symcrypt/: .cspell.json  Cargo.toml  README.md  azure.yaml
sdk/appconfiguration/: Cargo.toml  README.md
sdk/core/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  Test-Cleanup.ps1  Test-Setup.ps1  build.rs  ci.yml  perf-tests.yml  perf.yml
sdk/core_macros/: Cargo.toml
sdk/cosmos/: .cspell.json  .dict.txt  .gitignore  AGENTS.md  Cargo.toml  README.tpl  assets.json  ci-gateway20.yml  ci.yml  copilot_memory.md  cosmos-emulator-matrix.json  cutover-remaining-work.md  live-gateway20-matrix.json  live-platform-matrix.json  pr.yml  query-engine-porting-plan.md  release-platform-matrix.json  test-resources.bicep  tests.yml  vnext-emulator-matrix.json
sdk/data_cosmos/: Cargo.toml  README.md
sdk/data_kusto/: Cargo.toml  README.md
sdk/data_tables/: Cargo.toml  README.md
sdk/databricks/: Cargo.toml  README.md
services/: CHANGELOG.md  Cargo.toml  README.md  api-versions.md  rustfmt.toml  tags.md
(+14212 files in other folders)
