# cspell:ignore rustdoc

[workspace]
resolver = "2"
members = [
  "sdk/core/typespec",
  "sdk/core/typespec_client_core",
  "sdk/core/typespec_macros",
  "sdk/core/azure_core",
  "sdk/core/azure_core_amqp",
  "sdk/core/azure_core_macros",
  "sdk/core/azure_core_test",
  "sdk/core/azure_core_test_macros",
  "sdk/core/azure_core_opentelemetry",
  "sdk/cosmos/azure_data_cosmos",
  "sdk/cosmos/azure_data_cosmos_driver",
  "sdk/cosmos/azure_data_cosmos_native",
  "sdk/identity/azure_identity",
  "sdk/eventhubs/azure_messaging_eventhubs",
  "sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob",
  "sdk/keyvault/azure_security_keyvault_certificates",
  "sdk/keyvault/azure_security_keyvault_keys",
  "sdk/keyvault/azure_security_keyvault_secrets",
  "sdk/servicebus/azure_messaging_servicebus",
  "sdk/canary/azure_canary_core",
  "sdk/canary/azure_canary",
  "sdk/storage/azure_storage_common",
  "sdk/storage/azure_storage_blob",
  "sdk/storage/azure_storage_queue",
]
exclude = [
  "eng/scripts",
]

[workspace.package]
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
rust-version = "1.88"

[workspace.dependencies.typespec]
default-features = false
path = "sdk/core/typespec"
version = "0.13.0"

[workspace.dependencies.typespec_client_core]
default-features = false
path = "sdk/core/typespec_client_core"
version = "0.12.0"

[workspace.dependencies.typespec_macros]
version = "0.12.0"
path = "sdk/core/typespec_macros"

[workspace.dependencies.azure_core]
default-features = false
version = "0.33.0"
path = "sdk/core/azure_core"

[workspace.dependencies.azure_core_macros]
version = "0.7.0"
path = "sdk/core/azure_core_macros"

[workspace.dependencies.azure_core_amqp]
version = "0.12.0"
path = "sdk/core/azure_core_amqp"

[workspace.dependencies.azure_messaging_eventhubs]
version = "0.12.0"
path = "sdk/eventhubs/azure_messaging_eventhubs"

[workspace.dependencies.azure_core_opentelemetry]
# azure_core_opentelemetry should only ever be in dev-dependencies herein
path = "sdk/core/azure_core_opentelemetry"

[workspace.dependencies.azure_core_test]
# azure_core_test is not published and only ever a dev-dependency
path = "sdk/core/azure_core_test"

[workspace.dependencies.azure_core_test_macros]
# azure_core_test_macros is not published and only ever a dev-dependency
path = "sdk/core/azure_core_test_macros"

[workspace.dependencies.azure_identity]
# azure_identity should only ever be in dev-dependencies herein
path = "sdk/identity/azure_identity"

[workspace.dependencies.azure_storage_blob]
path = "sdk/storage/azure_storage_blob"
version = "0.10.0"

[workspace.dependencies]
async-lock = "3.4"
async-stream = { version = "0.3.6" }
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11.1"
cargo_metadata = "0.23.1"
clap = { version = "4.5.58", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
dyn-clone = "1.0"
fe2o3-amqp = { version = "0.14", features = ["uuid"] }
fe2o3-amqp-ext = { version = "0.14" }
fe2o3-amqp-management = { version = "0.14" }
fe2o3-amqp-cbs = { version = "0.14" }
fe2o3-amqp-types = { version = "0.14" }
flate2 = "1.1.9"
futures = "0.3"
getrandom = { version = "0.4" }
gloo-timers = { version = "0.3" }
hmac = { version = "0.12" }
include-file = { version = "0.5.1", default-features = false }
openssl = { version = "0.10.75" }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-stdout = { version = "0.31" }
opentelemetry_sdk = "0.31"
percent-encoding = "2.3"
pin-project = "1.1"
proc-macro2 = "1.0.106"
quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
quote = "1.0.44"
rand = { version = "0.10.0", features = ["sys_rng"] }
rand_chacha = "0.10"
reqwest = { version = "0.13.2", features = [
  "stream",
], default-features = false }
rust_decimal = "1.40.0"
rustc_version = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_amqp = { version = "0.14", features = ["uuid"] }
serde_bytes = { version = "0.11" }
serde_json = "1.0.149"
serde_test = "1"
serial_test = "3.3"
sha2 = { version = "0.10" }
syn = { version = "2.0.115", features = ["full"] }
tar = { version = "0.4.44", default-features = false }
thiserror = "2.0"
time = { version = "0.3.47", features = [
  "serde-well-known",
  "macros",
] }
tokio = { version = "1.49", default-features = false, features = [
  "macros",
  "time",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.20", features = ["v4"] }
windows-sys = { version = "0.61", features = [
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
] }
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }

[workspace.lints.clippy]
large_futures = "deny"
uninlined_format_args = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(docsrs)',
  'cfg(test_category, values("emulator", "multi_write"))',
] }

[workspace.lints.rustdoc]
bare_urls = "allow"
