# cspell:ignore rustdoc

[workspace]
resolver = "2"
members = [
  "sdk/core/typespec",
  "sdk/core/typespec_client_core",
  "sdk/core/typespec_macros",
  "sdk/core/azure_core",
  "sdk/core/azure_core_amqp",
  "sdk/core/azure_core_macros",
  "sdk/core/azure_core_examples",
  "sdk/core/azure_core_test",
  "sdk/core/azure_core_test_macros",
  "sdk/core/azure_core_opentelemetry",
  "sdk/cosmos/azure_data_cosmos",
  "sdk/cosmos/azure_data_cosmos_benchmarks",
  "sdk/cosmos/azure_data_cosmos_driver",
  "sdk/cosmos/azure_data_cosmos_macros",
  "sdk/cosmos/azure_data_cosmos_perf",
  "sdk/identity/azure_identity",
  "sdk/eventhubs/azure_messaging_eventhubs",
  "sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob",
  "sdk/keyvault/azure_security_keyvault_certificates",
  "sdk/keyvault/azure_security_keyvault_keys",
  "sdk/keyvault/azure_security_keyvault_secrets",
  "sdk/servicebus/azure_messaging_servicebus",
  "sdk/canary/azure_canary_core",
  "sdk/canary/azure_canary",
  "sdk/storage/azure_storage_blob",
  "sdk/storage/azure_storage_common",
  "sdk/storage/azure_storage_queue",
  "sdk/storage/azure_storage_sas",
]
exclude = [
  "eng/scripts/",
  "samples/",
]

[workspace.package]
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
rust-version = "1.88"

[workspace.dependencies.typespec]
default-features = false
version = "1.0.0"

[workspace.dependencies.typespec_client_core]
default-features = false
version = "1.0.0"

[workspace.dependencies.typespec_macros]
version = "1.0.0"

[workspace.dependencies.azure_core]
default-features = false
version = "1.0.0"

[workspace.dependencies.azure_core_macros]
version = "1.0.0"

[workspace.dependencies.azure_core_amqp]
version = "1.0.0"

[workspace.dependencies.azure_core_opentelemetry]
# azure_core_opentelemetry should only ever be in dev-dependencies herein
version = "1.0.0"

[workspace.dependencies.azure_core_test]
# azure_core_test should only ever be in dev-dependencies herein
version = "0.1.0"

[workspace.dependencies.azure_core_test_macros]
# azure_core_test_macros should only ever be in dev-dependencies herein
version = "0.1.0"

[workspace.dependencies.azure_identity]
# azure_identity should only ever be in dev-dependencies herein
version = "1.0.0"

[workspace.dependencies.azure_storage_blob]
version = "1.0.0"

[workspace.dependencies]
async-lock = "3.4"
async-stream = { version = "0.3.6" }
async-trait = "0.1"
base64 = "0.22"
arc-swap = "1.7"
backtrace = "0.3"
bytes = "1.11.1"
cargo_metadata = "0.23.1"
clap = { version = "4.5.58", features = ["derive"] }
console-subscriber = "0.4"
criterion = { version = "0.8", features = ["async_tokio"] }
crossbeam = { version = "0.8", default-features = false }
crossbeam-epoch = { version = "0.9", default-features = false }
dyn-clone = "1.0"
fe2o3-amqp = { version = "0.14", features = ["uuid"] }
fe2o3-amqp-ext = { version = "0.14" }
fe2o3-amqp-management = { version = "0.14" }
fe2o3-amqp-cbs = { version = "0.14" }
fe2o3-amqp-types = { version = "0.14" }
flate2 = "1.1.9"
futures = "0.3"
getrandom = { version = "0.4" }
gloo-timers = { version = "0.3" }
h2 = "0.4.13"
hdrhistogram = "7.5"
hostname = "0.4"
hmac = { version = "0.12" }
include-file = { version = "1.0.0", default-features = false }
openssl = { version = "0.10.79" }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-stdout = { version = "0.31" }
opentelemetry_sdk = "0.31"
percent-encoding = "2.3"
pin-project = "1.1"
proc-macro2 = "1.0.106"
quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
quote = "1.0.44"
rand = { version = "0.10.1", features = ["sys_rng"] }
rand_chacha = "0.10"
reqwest = { version = "0.13.2", features = [
  "stream",
], default-features = false }
rust_decimal = "1.40.0"
rustc_version = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_amqp = { version = "0.14", features = ["uuid"] }
serde_bytes = { version = "0.11" }
serde_json = "1.0.149"
serde_test = "1"
serial_test = "3.3"
sha2 = { version = "0.10" }
syn = { version = "2.0.115", features = ["full"] }
sysinfo = "0.33"
tar = { version = "0.4.45", default-features = false }
thiserror = "2.0"
time = { version = "0.3.47", features = [
  "serde-well-known",
  "macros",
] }
tokio = { version = "1.49", default-features = false, features = [
  "macros",
  "time",
] }
tokio-metrics = "0.4"
tracing = "0.1.44"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.20", features = ["v4"] }
windows = { version = "0.62", default-features = false }
zip = { version = "8.2", default-features = false, features = ["deflate"] }

# Profile for running benchmarks
# Inherits release optimizations but keeps debug symbols so that tools
# can produce annotated output.
[profile.bench]
inherits = "release"
debug = 1

[workspace.lints.clippy]
large_futures = "deny"
style = { level = "allow", priority = -1 }
uninlined_format_args = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[workspace.lints.rustdoc]
bare_urls = "allow"

[workspace.metadata.cargo-semver-checks.lints]
# Public model structs should stay constructible when fields are added.
# Encourage downstream code to use `..Default::default()` and
# `#[allow(clippy::needless_update)]` on that initializer when needed, so new optional
# fields do not force call sites to spell out every field.
constructible_struct_adds_field = "allow"
