[package]
name          = "azure_sdk_cosmos"
version       = "0.32.2"
description   = "Rust wrappers around Microsoft Azure REST APIs - Azure Cosmos DB crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core           = { path           = "../azure_sdk_core", version = "0.35.0" }
ring                     = "0.16"
md5                      = "0.7"
RustyXML                 = "0.1"
base64                   = "0.11"
chrono                   = "0.4"
env_logger               = "0.7"
http                     = "0.1.20"
http-body                = "0.2.0-alpha.3"
futures-core-preview     = "0.3.0-alpha.19"
futures-channel-preview  = "0.3.0-alpha.19"
futures-util-preview     = "0.3.0-alpha.19"
hyper                    = { version        = "0.13.0-alpha.4" , features  = ["unstable-stream"] }
log                      = "0.4"
mime                     = "0.3"
quick-error              = "1.2"
serde                    = { version = "1.0" }
serde_derive             = "1.0"
serde_json               = "1.0"
serde-xml-rs             = "0.3"
time                     = "0.1"
url                      = "2.1"
uuid                     = { version        = "0.8", features              = ["v4"] }
smallvec                 = { version        = "1.0"            , features  = ["serde"] }
bytes                    = "0.5"
hyper-rustls             = { version        = "0.19.0-alpha.3" , features  = [] }
futures                 = "0.3"

[dev-dependencies]
futures-executor-preview = "0.3.0-alpha.19"
tokio                    = "0.2.0-alpha.6"
futures-util             = "0.3.1"
serde                    = { version = "1.0", features = ["derive"] }

[features]
test_e2e                 = []
