[package]
name          = "azure_sdk_storage_account"
version       = "0.41.1"
description   = "Rust wrappers around Microsoft Azure REST APIs - Blob storage account crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core           = { path = "../azure_sdk_core", version = "0.43.4" }
azure_sdk_storage_core   = { path = "../azure_sdk_storage_core", version = "0.44.1" }
chrono                   = "0.4"
http                     = "0.2"
hyper                    = "0.13"
log                      = "0.4"

[dev-dependencies]
futures                  = "0.3"
tokio                    = { version = "0.2", features = ["macros"] }
env_logger               = "0.7"

[features]
test_e2e                 = []
