[package]
name          = "azure_sdk_storage_blob"
version       = "0.30.1"
description   = "Rust wrappers around Microsoft Azure REST APIs - Blob storage crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>", "Dong Liu <doliu@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core          = { path = "../azure_sdk_core", version = "0.35.0" }
azure_sdk_storage_core  = { path = "../azure_sdk_storage_core", version = "0.35.0" }
ring                    = "0.16"
md5                     = "0.7"
RustyXML                = "0.1"
base64                  = "0.11"
chrono                  = "0.4"
http                    = "0.2"
http-body               = "0.3"
futures                 = "0.3"
hyper                   = "0.13"
log                     = "0.4"
mime                    = "0.3"
quick-error             = "1.2"
serde                   = "1.0"
serde_derive            = "1.0"
serde_json              = "1.0"
serde-xml-rs            = "0.3"
time                    = "0.1"
url                     = "2.1"
uuid                    = { version = "0.8", features = ["v4"] }
smallvec                = { version = "1.0", features = ["serde"] }
bytes                   = "0.5"
hyper-rustls            = "0.19"

[dev-dependencies]
env_logger              = "0.7"
tokio                   = { version = "0.2", features = ["macros"] }

[features]
test_e2e                = []
