[package]
name          = "azure_sdk_storage_queue"
version       = "0.1.0"
description   = "Rust wrappers around Microsoft Azure REST APIs - Azure Storage Queue crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core           = { path = "../azure_sdk_core", version = "0.43.7" }
azure_sdk_storage_core   = { path = "../azure_sdk_storage_core", version = "0.44.4" }
ring                     = "0.16"
base64                   = "0.12"
chrono                   = "0.4"
http                     = "0.2"
futures                  = "0.3"
hyper                    = "0.13"
log                      = "0.4"
serde                    = "1.0"
serde_derive             = "1.0"
serde_json               = "1.0"
serde-xml-rs             = "0.4"
url                      = "2.1"
uuid                     = { version = "0.8", features = ["v4"] }
hyper-rustls             = "0.20"
failure			 = "0.1"

[dev-dependencies]
env_logger               = "0.7"
tokio                    = { version = "0.2", features = ["macros"] }
serde                    = { version = "1.0", features = ["derive"] }

[features]
test_e2e                 = []
