[package]
name          = "azure_sdk_storage_table"
version       = "0.41.1"
description   = "Rust wrappers around Microsoft Azure REST APIs - Table storage crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "gzp-crey", "Max Gortman <mgortman@microsoft.com>", "Dong Liu <doliu@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "https://docs.rs/azure_sdk_storage_table/"
homepage      = "https://mindflavor.github.io/AzureSDKForRust/"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core         = { path = "../azure_sdk_core", version = "0.43.4" }
azure_sdk_storage_core = { path = "../azure_sdk_storage_core", version = "0.44.1" }
chrono                 = "0.4"
http                   = "0.2"
hyper                  = "0.13"
log                    = "0.4"
quick-error            = "1.2"
serde                  = "1.0"
serde_derive           = "1.0"
serde_json             = "1.0"
futures                = "0.3"

[dev-dependencies]
tokio                  = { version = "0.2", features = ["macros"] }
env_logger             = "0.7"

[features]
test_e2e               = []
