[package]
name          = "azure_sdk_core"
version       = "0.43.7"
description   = "Rust wrappers around Microsoft Azure REST APIs - Core crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>", "Dong Liu <doliu@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/azure/azure-sdk-for-rust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/azure/azure-sdk-for-rust"
keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]
edition       = "2018"

[dependencies]
RustyXML                = "0.3"
base64                  = "0.13"
chrono                  = "0.4"
http                    = "0.2"
futures                 = "0.3"
hyper                   = "0.13"
log                     = "0.4"
quick-error             = "1.2"
serde                   = "1.0"
serde_derive            = "1.0"
serde_json              = "1.0"
serde-xml-rs            = "0.4"
url                     = "2.1"
uuid                    = { version = "0.8", features = ["v4"] }
bytes                   = "0.5"
hyper-rustls            = "0.21"
failure		            = "0.1"

[dev-dependencies]
tokio                   = "0.2"
env_logger              = "0.7"

[features]
test_e2e                = []
azurite_workaround	= []
